# Bouncy Castle tests
load("//tools:build_defs.bzl", "accp_all_tests", "accp_tests", "bouncycastle_all_tests", "bouncycastle_tests", "conscrypt_all_tests", "conscrypt_tests", "spongycastle_all_tests", "spongycastle_tests")

# WebCrypto Javascript tests
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_deps")

testvectors = ["//testvectors_v1:all"]

# java

java_library(
    name = "utils",
    srcs = [
        "java/com/google/security/wycheproof/EcUtil.java",
        "java/com/google/security/wycheproof/JsonUtil.java",
        "java/com/google/security/wycheproof/RandomUtil.java",
        "java/com/google/security/wycheproof/TestResult.java",
        "java/com/google/security/wycheproof/TestUtil.java",
        "java/com/google/security/wycheproof/TestVectors.java",
    ],
    deps = [
        "@com_google_code_gson_gson",
        "@junit",
    ],
)

common_deps = [
    ":utils",
    "@com_google_code_gson_gson",
    "@junit",
]

test_srcs = glob([
    "java/**/WycheproofRunner.java",
    "java/**/testcases/*Test.java",
])

# Generates BouncyCastleAllTests_1_xx target for all available versions,
# plus a BouncyCastleAllTests alias for latest stable.
#
# To test latest stable:
#   $ bazel test BouncyCastleAllTests
#
# To test other versions, e.g., v1.52:
#   $ bazel test BouncyCastleAllTests_1_52
#
# To test all known versions (warning, will take a long time):
#   $ bazel test $(bazel query 'attr(name, "BouncyCastleAllTests_.*", //...)')
bouncycastle_all_tests(
    # This test takes a long time, because key generation for DSA and DH generate new parameters.
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
    deps = common_deps,
)

java_test(
    name = "BouncyCastleAllTestsLocal",
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/BouncyCastleAllTests.java"] + test_srcs,
    data = testvectors,
    # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
    # with tags=["manual"] it'll be excluded from said patterns.
    tags = ["manual"],
    test_class = "com.google.security.wycheproof.BouncyCastleAllTests",
    deps = common_deps + ["@local//:bouncycastle_jar"],
)

# Generates BouncyCastleTest_1_xx target for all available versions,
# plus a BouncyCastleTest alias for latest stable.
#
# To test latest stable:
#   $ bazel test BouncyCastleTest
#
# To test other versions, e.g., v1.52:
#   $ bazel test BouncyCastleTest_1_52
#
# To test all known versions:
#   $ bazel test $(bazel query 'attr(name, "BouncyCastleTest_.*", //...)')
bouncycastle_tests(
    size = "large",
    srcs = ["java/com/google/security/wycheproof/BouncyCastleTest.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.BouncyCastleTest",
    deps = common_deps,
)

java_test(
    name = "BouncyCastleTestLocal",
    size = "large",
    srcs = ["java/com/google/security/wycheproof/BouncyCastleTest.java"] + test_srcs,
    data = testvectors,
    # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
    # with tags=["manual"] it'll be excluded from said patterns.
    tags = ["manual"],
    test_class = "com.google.security.wycheproof.BouncyCastleTest",
    deps = common_deps + ["@local//:bouncycastle_jar"],
)

# Generates SpongyCastleAllTests_1_xx target for all available versions,
# plus a SpongyCastleAllTests alias for latest stable.
#
# To test latest stable:
#   $ bazel test SpongyCastleAllTests
#
# To test other versions, e.g., v1.52.0.0:
#   $ bazel test SpongyCastleAllTests_1_52
#
# To test all known versions (warning, will take a long time):
#   $ bazel test $(bazel query 'attr(name, "SpongyCastleAllTests_.*", //...)')
spongycastle_all_tests(
    # This test takes a long time, because key generation for DSA and DH generate new parameters.
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/SpongyCastleAllTests.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.SpongyCastleAllTests",
    deps = common_deps,
)

# Generates SpongyCastleTest_1_xx target for all available versions,
# plus a SpongyCastleTest alias for latest stable.
#
# To test latest stable:
#   $ bazel test SpongyCastleTest
#
# To test other versions, e.g., v1.52.0.0:
#   $ bazel test SpongyCastleTest_1_52
#
# To test all known versions:
#   $ bazel test $(bazel query 'attr(name, 'SpongyCastleTest_.*", //...)')
spongycastle_tests(
    size = "large",
    srcs = ["java/com/google/security/wycheproof/SpongyCastleTest.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.SpongyCastleTest",
    deps = common_deps,
)

conscrypt_tests(
    size = "large",
    srcs = ["java/com/google/security/wycheproof/ConscryptTest.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.ConscryptTest",
    deps = common_deps,
)

conscrypt_all_tests(
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/ConscryptAllTests.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.ConscryptAllTests",
    deps = common_deps,
)

accp_tests(
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.AccpTest",
    deps = common_deps,
)

java_test(
    name = "AccpTestLocal",
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/AccpTest.java"] + test_srcs,
    data = testvectors,
    # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
    # with tags=["manual"] it'll be excluded from said patterns.
    tags = ["manual"],
    test_class = "com.google.security.wycheproof.AccpTest",
    deps = common_deps + ["@local//:accp_jar"],
)

accp_all_tests(
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/AccpAllTests.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.AccpAllTests",
    deps = common_deps,
)

java_test(
    name = "AccpAllTestsLocal",
    size = "enormous",
    srcs = ["java/com/google/security/wycheproof/AccpAllTests.java"] + test_srcs,
    data = testvectors,
    # this target requires specifing a shell variable, thus won't work with the wildcard target patterns.
    # with tags=["manual"] it'll be excluded from said patterns.
    tags = ["manual"],
    test_class = "com.google.security.wycheproof.AccpAllTests",
    deps = common_deps + ["@local//:accp_jar"],
)

# OpenJDK tests
java_test(
    name = "OpenJDKTest",
    size = "large",
    srcs = ["java/com/google/security/wycheproof/OpenJDKTest.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.OpenJDKTest",
    deps = common_deps,
)

java_test(
    name = "OpenJDKAllTests",
    size = "large",
    srcs = ["java/com/google/security/wycheproof/OpenJDKAllTests.java"] + test_srcs,
    data = testvectors,
    test_class = "com.google.security.wycheproof.OpenJDKAllTests",
    deps = common_deps,
)

# Platform-independent tests
java_test(
    name = "ProviderIndependentTest",
    size = "small",
    srcs = ["java/com/google/security/wycheproof/ProviderIndependentTest.java"] + test_srcs,
    data = testvectors,
    deps = common_deps,
)

closure_js_deps(
    name = "E2EDeps",
    deps = ["@google_e2e//:e2e"],
)
