package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

filegroup(
    name = "aes_cbc_pkcs5",
    srcs = ["aes_cbc_pkcs5_test.json"],
)

filegroup(
    name = "aes_cmac",
    srcs = ["aes_cmac_test.json"],
)

filegroup(
    name = "aes_gcm_siv",
    srcs = ["aes_gcm_siv_test.json"],
)

filegroup(
    name = "aes_eax",
    srcs = ["aes_eax_test.json"],
)

filegroup(
    name = "aes_gcm",
    srcs = ["aes_gcm_test.json"],
)

filegroup(
    name = "aes_siv_cmac",
    srcs = ["aes_siv_cmac_test.json"],
)

filegroup(
    name = "chacha20_poly1305",
    srcs = ["chacha20_poly1305_test.json"],
)

filegroup(
    name = "dsa",
    srcs = ["dsa_test.json"],
)

filegroup(
    name = "ecdsa",
    srcs = glob(["ecdsa_*test.json"]),
)

filegroup(
    name = "ecdh",
    srcs = glob(["ecdh_*test.json"]),
)

filegroup(
    name = "eddsa",
    srcs = ["eddsa_test.json"],
)

filegroup(
    name = "rsa_signature",
    srcs = glob(["rsa_signature_*test.json"]),
)

filegroup(
    name = "ecdsa_webcrypto",
    srcs = ["ecdsa_webcrypto_test.json"],
)

filegroup(
    name = "ecdh_webcrypto",
    srcs = ["ecdh_webcrypto_test.json"],
)

filegroup(
    name = "x25519",
    srcs = ["x25519_test.json"],
)
